--- a/leetcodeWebsite/015三数和0.md
+++ b/leetcodeWebsite/015三数和0.md
@@ -24,7 +24,7 @@ Notice that the solution set must not contain duplicate triplets.
        return res
   ```
 
-  将这种方式应用到题目中：先固定一个元素t，再在后面的元素中寻找和为-t的二元组。
+  将这种方式应用到题目中：先固定一个元素t，再在后面的元素中寻找和为-t的二元组。时间复杂度为$O(n^2)$
 
   ```python
   def duopos(nums, i, j, t):
@@ -105,4 +105,39 @@ Notice that the solution set must not contain duplicate triplets.
   ```
 
   
+
+
+
+实际上，可以固定两端元素，查找中间是否有让其和（三数之和为0）的第三个元素. XXXX 这是不行的，因为固定两端元素之后，下一次移动哪一端的元素呢？（这似乎是没法确定的，到头来还是造成了n^2的时间复杂）
+
+```python
+def bs(nums, start, end, t):
+    # [start, end) contains t?
+    i, j = start, end
+    while i < j:
+        m = i + (j - i) // 2
+        if nums[m] < t:
+            i = m + 1
+        else:
+            j = m
+     return i < len(nums) and nums[i] == t
+
+class Solution:
+    def threeSum(self, nums: List[int]) -> List[List[int]]:
+        nums.sort()
+        res = []
+        n = len(nums)
+        i, j = 0, n - 1
+        
+        while i < j:
+            if bs(nums, i+1, j, -(nums[i] + nums[j])):
+                res.append( [nums[i], -(nums[i] + nums[j]), nums[j]] )
+            while i < j and nums[i] == nums[i+1]:
+                i += 1
+            while i < j and nums[j] == nums[j-1]:
+                j -= 1
+            i += 1
+            j -=
+            
+```
 
