--- a/leetcodeWebsite/233数字1的数量.md
+++ b/leetcodeWebsite/233数字1的数量.md
@@ -25,7 +25,7 @@ def countDigitOne(self, n):
 
 1. 拆分为 31415(a) 92(b)两个部分：分析a最后一位 1 的总数
 
-   31415的前缀部分从 '0000' 到 '3141'，因此一共有315个后面的个位，其中每个[0, 9]都有个1，因此一共有315个1。
+   31415的前缀部分从 '0000' 到 '3141'，因此一共有315个后面的个位，其中最后一位每个循环 ([0, 9]) 都有个1，因此一共有315个1。
 
    再结合末两位，因此 1 的数量是 `(a // 10 + 1) * 100` 个。
 
@@ -44,3 +44,4 @@ def countDigitOne(self, n):
 ​	{1} 对应的位非完整的 (b + 1) 个
 
 ​	{0} 对应为空
+
