--- a/leetcodeWebsite/031下一个排列.md
+++ b/leetcodeWebsite/031下一个排列.md
@@ -12,14 +12,11 @@ The replacement must be **[in place](http://en.wikipedia.org/wiki/In-place_algor
 
 * M1：从后往前扫描，寻找到第一个位置（i）满足要求（其元素小于其后位置的元素）。
 
-扫描到的位置有两种情况：1）无此元素，i < -1；2）有此元素 0<= i <= n - 1。后者的话需要将 i 位置的元素与i后面的部分中大于nums[i]且最紧邻的元素交换，再将 [i+1, ]后面的元素reverse。
+扫描到的位置有两种情况：1）无此元素，i < -1；2）有此元素 0<= i <= n - 1。后者的话需要将 i 位置的元素与i后面的部分中大于nums[i]且值最紧邻的元素交换（即该元素的索引在i后面，且其值大于`nums[i]`，且其deviation最小），再将 `[i+1, ]`后面的元素reverse。
 
 ```python
 class Solution:
     def nextPermutation(self, nums: List[int]) -> None:
-        """
-        Do not return anything, modify nums in-place instead.
-        """
         n = len(nums)
         i, j = n-2,  n - 1
         while i >= 0:
@@ -38,4 +35,10 @@ class Solution:
             i += 1
             j -= 1
 ```
+
+
+
+
+
+1,4,3,2 -> 2, 1, 3, 4
 
