--- a/leetcodeWebsite/739温度.md
+++ b/leetcodeWebsite/739温度.md
@@ -1,6 +1,8 @@
+Given an array of integers temperatures represents the daily temperatures, return an array answer such that answer[i] is the number of days you have to wait after the ith day to get a warmer temperature. If there is no future day for which this is possible, keep answer[i] == 0 instead.
+
 * My Solution
 
-从右到左遍历，维护一个栈，栈中元素存储从左右到递增的温度。
+从右到左遍历，维护一个栈，栈中元素存储从左到右递增的温度。
 如是就可以对任意一个新遍历的元素，去决定其右侧哪一个元素比它高。
 
 
