--- a/leetcodeWebsite/047排列2.md
+++ b/leetcodeWebsite/047排列2.md
@@ -3,7 +3,7 @@
 **有重复元素的排列**
 
 
-* My Solution extracted from `046排列`   
+* My Solution extracted from `046排列`   【大大的错误】
 
 ```python
 class Solution:
@@ -66,7 +66,7 @@ def permuteUnique(self, nums):
         ans = new_ans
     return ans
 ```
-
+扩展旧答案为更大的答案。将新元素插入到旧答案中的每一个空隙（以此构成更大的解）；如果n与l[i]相同，那么n只能插在l[i]前面，不能后面（防止重复）  
 Here is my understanding about the eliminate process.
 
 After several times of append and other operations,
