--- a/leetcodeWebsite/086 划分链表.md
+++ b/leetcodeWebsite/086 划分链表.md
@@ -4,7 +4,7 @@ Given the `head` of a linked list and a value `x`, partition it such that all no
 
 You should **preserve** the original relative order of the nodes in each of the two partitions.
 
-- mine: 将其分为两个链表，分别维持小于pivot和大于等于pivot的元素
+- mine: <u>将其分为两个链表，分别维持小于pivot和大于等于pivot的元素</u>
 
 ```python
 class Solution:
@@ -25,7 +25,7 @@ class Solution:
         return a.next
 ```
 
-这个方式也可以分割为两部分，但是是不稳定【不满足题目要求】
+以下这个方式也可以分割为两部分，但是是不稳定【不满足题目要求】
 
 ```python
 class Solution:
