--- a/leetcodeWebsite/087 搅乱字符串.md
+++ b/leetcodeWebsite/087 搅乱字符串.md
@@ -1,6 +1,14 @@
 # 087 搅乱字符串
 
+We can scramble a string s to get a string t using the following algorithm:
 
+1. If the length of the string is 1, stop.
+2. If the length of the string is > 1, do the following:
+   - Split the string into two non-empty substrings at a random index, i.e., if the string is `s`, divide it to `x` and `y` where `s = x + y`.
+   - **Randomly** decide to swap the two substrings or to keep them in the same order. i.e., after this step, `s` may become `s = x + y` or `s = y + x`.
+   - Apply step 1 recursively on each of the two substrings `x` and `y`.
+
+Given two strings `s1` and `s2` of **the same length**, return `true` if `s2` is a scrambled string of `s1`, otherwise, return `false`.
 
 * Mine: idea is simple, 源字符串S必然在某个地方得到分割，也就是字母会被分为两个group，所以对扰乱字符串T从两侧开始计算字母数量。某个时刻，S的一部分会和T从前往后（或从后往前）的子串字母频率相同。
 
@@ -44,3 +52,4 @@ class Solution:
 你能看见光吗？是因为你看见了光本身还是其反射？
 
 你能看见重力吗？
+
