--- a/leetcodeWebsite/077组合.md
+++ b/leetcodeWebsite/077组合.md
@@ -37,7 +37,7 @@ class Solution:
                 res.append(p)
                 return
             for i in range(m, n):
-                comb(i+1, p + [A[i]]) #（*)
+                comb(i+1, p + [A[i]]) #(*)
         comb(0, [])
         return res
 ```
